--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-jss": "^10.3.0",
     "react-p5": "^1.3.6",
     "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
